# otzovik

./: .env.example  .gitignore  CLAUDE.md  FEATURES.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  search.py  users.py
backend/app/core/: config.py  deps.py  email.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  search_query.py  site.py  user.py
backend/app/schemas/: auth.py  search.py  user.py
backend/app/services/: ai_service.py  otp_service.py  search_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/admin/: page.tsx
frontend/app/dashboard/search/[id]/: page.tsx
frontend/components/modules/ConfirmDialog/: index.tsx
frontend/components/modules/DataTable/: DataTable.types.ts  index.tsx
frontend/components/modules/EmptyState/: index.tsx
frontend/components/modules/Filters/: index.tsx
frontend/components/modules/SearchProgress/: index.tsx
frontend/components/modules/SentimentBar/: index.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: api.ts  utils.ts
frontend/store/: authStore.ts
frontend/styles/: globals.css  tokens.css
infra/: docker-compose.yml
infra/searxng/: settings.yml  uwsgi.ini
(+3 files in other folders)
